add post and pre payment alerts

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@
   --main-color-content:#F4F0F8;
   --secondary-color-content-1: #e9dcf7;
   --secondary-color-content-2: #5519b6;
-  --secondary-color-content-3: #47037c;
+  --secondary-color-content-3: #602D93;
   --secondary-color-content-4: #32239539;
   --secondary-color-items-1: #ffc989;
   --secondary-color-items-2: #60a890;
