--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,8 +23,8 @@
   box-sizing: border-box
 }
 
-
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 .App {
   min-height: 100vh;
   margin-top: 65px;
@@ -36,44 +36,10 @@
   flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.div-inicial{
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-/* body {
-  margin-top: 65px;
-  margin-bottom: 270px;
-} */
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 ::-webkit-scrollbar {
   width: 10px;
   background: transparent;
